[package]
author = "aeryz"
description = "Cosmwasm-vm in Cosmwasm contract"
edition = "2021"
license = "Apache-2.0"
name = "cosmwasmception"
repository = "https://github.com/aeryz/cosmwasmception"
version = "0.1.0"
resolver = "2"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "cosmwasmception.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std= { version = "1.0.0" }
cw-storage-plus = "0.13.2"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
serde-json-wasm = { git = "https://github.com/hussein-aitlahcen/serde-json-wasm", rev = "1608a13d2a2ba90605d9626a51ff6667aca5a2d6" }
serde_json = "1"
thiserror = { version = "1.0.31" }
cosmwasm-vm = { git= "https://github.com/ComposableFi/cosmwasm-vm", branch = "workshop" }
cosmwasm-vm-wasmi = { git= "https://github.com/ComposableFi/cosmwasm-vm", branch = "workshop", features = [ "iterator" ]}
cosmwasm-minimal-std = { git= "https://github.com/ComposableFi/cosmwasm-vm", branch = "workshop" }
wasmi = { git = "https://github.com/ComposableFi/wasmi", rev = "cd8c0c775a1d197a35ff3d5c7d6cded3d476411b", default-features = false }
bincode = "1.3"

[patch.crates-io]
serde-json-wasm = { git = "https://github.com/hussein-aitlahcen/serde-json-wasm", rev = "1608a13d2a2ba90605d9626a51ff6667aca5a2d6" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
